app/page.module.css
.main {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  padding: 6rem;
  min-height: 100vh;
}

.center {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
  padding: 4rem 0;
}

.title {
  font-size: 3.5rem;
  font-weight: 700;
  text-align: center;
  margin-bottom: 0.5rem;
  font-family: var(--font-orbitron);
}

.description {
  font-size: 1rem;
  font-weight: 200;
  text-align: center;
  margin-bottom: 2.5rem;
  font-family: var(--font-manrope);
}

.githubLink {
  position: fixed;
  top: 16px;
  right: 16px;
  opacity: 0.7;
}

.githubImage {
  width: 32px;
  height: 32px;
}

/* Mobile */
@media (max-width: 700px) {
  .main {
    padding: 0 16px;
  }

  .center {
    padding: 0.5rem 0 1rem;
  }

  .center::before {
    transform: none;
    height: 300px;
  }

  .title {
    font-size: 2.5rem;
    margin-bottom: 0.4rem;
  }

  .description {
    font-size: 0.9rem;
    margin-bottom: 2rem;
  }

  .githubImage {
    width: 24px;
    height: 24px;
  }
}

/* Tablet and Smaller Desktop */
@media (min-width: 701px) and (max-width: 1120px) {
  .main {
    padding: 2rem;
  }

  .center {
    padding: 2rem 0 1rem;
  }

  .title {
    font-size: 3.5rem;
    margin-bottom: 0.4rem;
  }

  .description {
    font-size: 1rem;
    margin-bottom: 2.5rem;
  }
}

